PROJECT ( Gravity )
CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

# versions
SET (GRAVITY_VERSION_MAJOR 1)
SET (GRAVITY_VERSION_MINOR 0)

# folders
ADD_SUBDIRECTORY (src)
# include_directories ("${PROJECT_SOURCE_DIR}/assets")
# include_directories ("${PROJECT_SOURCE_DIR}/include")
# include_directories ("${PROJECT_SOURCE_DIR}/lib")
